sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: '<-' expected but ')' found.
		for(i<-!getNombreValeurs()-2 to 0 by -1) {
                                                       ^AlgCocktailSort1:15: error: illegal start of simple expression
	}
        ^